# amharic-doc-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_SETUP.md  BEFORE_VS_AFTER.md  CHECKLIST.md  CLAUDE.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  SETUP.md  test_ai.py
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20240209_01_create_users_table.py  20240209_02_create_documents_table.py  20240209_03_create_processing_jobs_table.py  20240209_04_create_processing_tasks_table.py  20240209_05_create_quality_metrics_table.py  20240209_06_create_search_indices_table.py  20240209_07_create_export_templates_table.py  20240209_08_create_processing_logs_table.py  20240209_09_create_audit_logs_table.py
backend/scripts/: generate_encryption_keys.py  rotate_encryption_keys.py  setup_simple.sh
backend/src/: __init__.py
backend/src/agents/: __init__.py
backend/src/agents/amharic_nlp/: __init__.py
backend/src/agents/csv_processor/: __init__.py
backend/src/agents/document_analyzer/: __init__.py
backend/src/agents/image_ocr/: __init__.py
backend/src/agents/orchestrator/: __init__.py
backend/src/agents/pdf_extractor/: __init__.py
backend/src/agents/quality_assurance/: __init__.py
backend/src/agents/web_scraper/: __init__.py
backend/src/agents/word_extractor/: __init__.py
backend/src/api/: __init__.py  websocket.py
backend/src/api/routes/: auth.py  documents.py  export.py  mcp.py  processing.py  quality.py  search.py
backend/src/config/: __init__.py  ai_providers.py  opentelemetry.py  security.py  settings.py
backend/src/db/: __init__.py  base.py
backend/src/db/models/: __init__.py  audit_log.py  document.py  export_template.py  processing_job.py  processing_log.py  processing_task.py  quality_metric.py  search_index.py  user.py
backend/src/db/mongo/: __init__.py  extracted_content.py
backend/src/mcp/: __init__.py  simple_server.py
backend/src/mcp/tools/: __init__.py
backend/src/models/: __init__.py
backend/src/models/schemas/: __init__.py  auth.py  documents.py  export.py  mcp.py  processing.py  quality.py  search.py
backend/src/services/: __init__.py  audit.py  auth.py  documents.py  entity_recognition.py  export.py  processing.py  quality.py  search.py  search_suggestions.py  spell_check.py  summarization.py  webhooks.py
backend/src/worker/: __init__.py  __main__.py  celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_contracts.py  test_documents_contracts.py  test_export_contracts.py  test_mcp_contracts.py  test_processing_contracts.py  test_quality_contracts.py  test_search_contracts.py
backend/tests/integration/: test_job_management.py  test_mcp_tools.py  test_multi_format_pipeline.py  test_quality_metrics.py  test_resilience_autoscaling.py  test_search_export_flow.py  test_ws_processing.py
backend/tests/integration/mcp/: test_mcp_tools.py
docs/: API.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Layout.tsx
frontend/src/components/AccessibilityProvider/: index.tsx
frontend/src/components/DocumentPreview/: index.tsx
frontend/src/components/FileUpload/: index.tsx
frontend/src/components/ProcessingDashboard/: index.tsx
frontend/src/components/SearchInterface/: index.tsx
frontend/src/components/SearchPreview/: index.tsx
frontend/src/hooks/: useDocumentSystem.ts
frontend/src/i18n/: index.ts  index.tsx
frontend/src/i18n/locales/: am.json  en.json
frontend/src/test/: setup.ts
frontend/src/utils/: accessibility.ts  accessibility.tsx
frontend/tests/components/: file-upload.test.tsx  i18n-accessibility.test.tsx  processing-dashboard.test.tsx  search-preview.test.tsx
frontend/tests/e2e/: quickstart.spec.ts
infrastructure/: docker-compose.yml
infrastructure/kubernetes/: backend.yaml  frontend.yaml  namespace.yaml  postgres.yaml
infrastructure/monitoring/: README.md
infrastructure/monitoring/alertmanager/: alertmanager.yml
infrastructure/monitoring/grafana/: datasources.yml
infrastructure/monitoring/grafana/dashboards/: application-overview.json  infrastructure.json
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/alerts/: application.yml  infrastructure.yml
infrastructure/scripts/: README.md  backup_local.sh  restore_local.sh
infrastructure/security/: encryption-setup.md
specs/001-build-a-comprehensive/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-comprehensive/contracts/: api-spec.yaml
