[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amharic-document-system"
version = "1.0.0"
description = "Comprehensive Amharic Document Preparation System with CrewAI multi-agent orchestration"
authors = [{name = "Amharic Document System Team", email = "support@amharic-docs.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    
    # CrewAI and Agent Framework
    "crewai>=0.76.0",
    "langchain>=0.1.0",
    
    # Database and Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "motor>=3.3.0",  # MongoDB async driver
    "redis[hiredis]>=5.0.0",
    "minio>=7.2.0",
    "elasticsearch>=8.10.0",
    
    # Document Processing
    "tesseract>=0.1.3",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "pandas>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    
    # AI Providers
    "google-generativeai>=0.3.0",  # Gemini
    "openai>=1.6.0",  # OpenRouter via OpenAI SDK
    "anthropic>=0.8.0",  # Claude (optional)
    "mcp>=0.1.0",  # Model Context Protocol

    # Amharic Language Processing
    "spacy>=3.7.0",
    "transformers>=4.35.0",
    
    # Security and Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "celery[redis]>=5.3.0",
    "flower>=2.0.0",  # Celery monitoring
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=3.7.0",
    "httpx>=0.25.0",  # For test client
    
    # Code Quality
    "ruff>=0.1.0",
    "black>=23.9.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "safety>=2.3.0",
    
    # Security Scanning
    "bandit>=1.7.5",
    "semgrep>=1.45.0",
]

production = [
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/your-org/amharic-document-system"
Documentation = "https://docs.amharic-docs.ai"
Repository = "https://github.com/your-org/amharic-document-system.git"
Issues = "https://github.com/your-org/amharic-document-system/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B018"]

[tool.black]
target-version = ['py311']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "tesseract.*",
    "motor.*",
    "minio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "contract: marks tests as contract tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]